eint23-447: add route for contract details handling
